# serializer version: 1
# name: test_sensors[sensor][sensor.clou_duo_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'low_fuel',
        'service_due',
        'flue_gas_warning',
        'low_battery',
        'speed_sensor_failure',
        'door_open',
        'airflow_malfunction',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alert',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Alert',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alert',
    'unique_id': 'aa:bb:cc:dd:ee:ff_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'code': None,
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Alert',
      'options': list([
        'none',
        'low_fuel',
        'service_due',
        'flue_gas_warning',
        'low_battery',
        'speed_sensor_failure',
        'door_open',
        'airflow_malfunction',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_burning_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_burning_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Burning time',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Burning time',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_time',
    'unique_id': 'aa:bb:cc:dd:ee:ff_heating_time',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_burning_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Clou Duo Burning time',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_burning_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.13333333333333',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_combustion_chamber-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_combustion_chamber',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Combustion chamber',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Combustion chamber',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'combustion_chamber_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff_combustion_chamber_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_combustion_chamber-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Clou Duo Combustion chamber',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_combustion_chamber',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '206.0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_combustion_chamber_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_combustion_chamber_pressure',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Combustion chamber pressure',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Combustion chamber pressure',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pressure',
    'unique_id': 'aa:bb:cc:dd:ee:ff_pressure',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_combustion_chamber_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Combustion chamber pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_combustion_chamber_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '675',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_detailed_stove_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'cold_start_off',
        'wood_burning_off',
        'pre_heating',
        'ignition',
        'pre_combustion',
        'combustion',
        'eco',
        'cooling',
        'hybrid_init',
        'hybrid_start',
        'wood_start',
        'cold_start',
        'wood_combustion',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_detailed_stove_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Detailed stove status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Detailed stove status',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'detailed_stove_status',
    'unique_id': 'aa:bb:cc:dd:ee:ff_detailed_stove_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_detailed_stove_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Detailed stove status',
      'options': list([
        'off',
        'cold_start_off',
        'wood_burning_off',
        'pre_heating',
        'ignition',
        'pre_combustion',
        'combustion',
        'eco',
        'cooling',
        'hybrid_init',
        'hybrid_start',
        'wood_start',
        'cold_start',
        'wood_combustion',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_detailed_stove_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'combustion',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_error-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'none',
        'ignition_failed',
        'chimney_dirty',
        'sensor_t02',
        'sensor_t03_t05',
        'sensor_t04',
        'safety_switch',
        'pressure_sensor_off',
        'sensor_t01_t02',
        'sensor_t01_t03',
        'flue_gas_overtemp',
        'fuel_ignition_timeout',
        'general_error',
        'mfdoor_alarm',
        'fire_error',
        'chimney_alarm',
        'grate_error',
        'ntc2_alarm',
        'ntc3_alarm',
        'door_alarm',
        'pressure_alarm',
        'ntc1_alarm',
        'tc1_alarm',
        'gas_alarm',
        'no_pellet_alarm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Error',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error',
    'unique_id': 'aa:bb:cc:dd:ee:ff_error',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_error-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'code': None,
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Error',
      'options': list([
        'none',
        'ignition_failed',
        'chimney_dirty',
        'sensor_t02',
        'sensor_t03_t05',
        'sensor_t04',
        'safety_switch',
        'pressure_sensor_off',
        'sensor_t01_t02',
        'sensor_t01_t03',
        'flue_gas_overtemp',
        'fuel_ignition_timeout',
        'general_error',
        'mfdoor_alarm',
        'fire_error',
        'chimney_alarm',
        'grate_error',
        'ntc2_alarm',
        'ntc3_alarm',
        'door_alarm',
        'pressure_alarm',
        'ntc1_alarm',
        'tc1_alarm',
        'gas_alarm',
        'no_pellet_alarm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'none',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fan_1_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_fan_1_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan 1 speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan 1 speed',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_1_speed',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fan_1_speed',
    'unit_of_measurement': 'rpm',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fan_1_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Fan 1 speed',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'rpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_fan_1_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '108',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fan_2_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_fan_2_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fan 2 speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fan 2 speed',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fan_2_speed',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fan_2_speed',
    'unit_of_measurement': 'rpm',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fan_2_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Fan 2 speed',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'rpm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_fan_2_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fuel_consumed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_fuel_consumed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fuel consumed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fuel consumed',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fuel_used',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fuel_used',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fuel_consumed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Fuel consumed',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_fuel_consumed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fuel_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.clou_duo_fuel_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fuel level',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fuel level',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fuel_quantity',
    'unique_id': 'aa:bb:cc:dd:ee:ff_fuel_quantity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_fuel_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Fuel level',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_fuel_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '95.0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_igniter_starts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_igniter_starts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Igniter starts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Igniter starts',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'igniter_starts',
    'unique_id': 'aa:bb:cc:dd:ee:ff_igniter_starts',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_igniter_starts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Igniter starts',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_igniter_starts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_misfires-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_misfires',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Misfires',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Misfires',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'misfires',
    'unique_id': 'aa:bb:cc:dd:ee:ff_misfires',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_misfires-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Misfires',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_misfires',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_overheatings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_overheatings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Overheatings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Overheatings',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'overheatings',
    'unique_id': 'aa:bb:cc:dd:ee:ff_overheatings',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_overheatings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Overheatings',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_overheatings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_power_output-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_power_output',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power output',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'Power output',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_output',
    'unique_id': 'aa:bb:cc:dd:ee:ff_power_output',
    'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_power_output-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Clou Duo Power output',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.KILO_WATT: 'kW'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_power_output',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.6',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_stove_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'heating_up',
        'ignition',
        'burning',
        'eco',
        'cooling',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.clou_duo_stove_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stove status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Stove status',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'stove_status',
    'unique_id': 'aa:bb:cc:dd:ee:ff_stove_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_stove_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Stove status',
      'options': list([
        'off',
        'heating_up',
        'ignition',
        'burning',
        'eco',
        'cooling',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_stove_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'burning',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.clou_duo_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Clou Duo Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.7',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_time_to_service-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_time_to_service',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Time to service',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Time to service',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'time_to_service',
    'unique_id': 'aa:bb:cc:dd:ee:ff_time_to_service',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_time_to_service-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Clou Duo Time to service',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_time_to_service',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2159',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_uptime-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_uptime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Uptime',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Uptime',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'uptime',
    'unique_id': 'aa:bb:cc:dd:ee:ff_uptime',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_uptime-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Clou Duo Uptime',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_uptime',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-04-19T11:54:00+00:00',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wi_fi_rssi-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_wi_fi_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wi-Fi RSSI',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Wi-Fi RSSI',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_rssi',
    'unique_id': 'aa:bb:cc:dd:ee:ff_wifi_rssi',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wi_fi_rssi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Clou Duo Wi-Fi RSSI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_wi_fi_rssi',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-60',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wi_fi_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_wi_fi_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wi-Fi signal strength',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wi-Fi signal strength',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_signal_strength',
    'unique_id': 'aa:bb:cc:dd:ee:ff_wifi_signal_strength',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wi_fi_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Clou Duo Wi-Fi signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_wi_fi_signal_strength',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wircu_module-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.clou_duo_wircu_module',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'WiRCU module',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'WiRCU module',
    'platform': 'fumis',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'module_temperature',
    'unique_id': 'aa:bb:cc:dd:ee:ff_module_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensors[sensor][sensor.clou_duo_wircu_module-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Clou Duo WiRCU module',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_wircu_module',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '27.0',
  })
# ---
# name: test_sensors_active_error_and_alert[info_error_alert-sensor]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'code': 'E101',
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Error',
      'options': list([
        'none',
        'ignition_failed',
        'chimney_dirty',
        'sensor_t02',
        'sensor_t03_t05',
        'sensor_t04',
        'safety_switch',
        'pressure_sensor_off',
        'sensor_t01_t02',
        'sensor_t01_t03',
        'flue_gas_overtemp',
        'fuel_ignition_timeout',
        'general_error',
        'mfdoor_alarm',
        'fire_error',
        'chimney_alarm',
        'grate_error',
        'ntc2_alarm',
        'ntc3_alarm',
        'door_alarm',
        'pressure_alarm',
        'ntc1_alarm',
        'tc1_alarm',
        'gas_alarm',
        'no_pellet_alarm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_error',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ignition_failed',
  })
# ---
# name: test_sensors_active_error_and_alert[info_error_alert-sensor].1
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'code': 'A001',
      'device_class': 'enum',
      'friendly_name': 'Clou Duo Alert',
      'options': list([
        'none',
        'low_fuel',
        'service_due',
        'flue_gas_warning',
        'low_battery',
        'speed_sensor_failure',
        'door_open',
        'airflow_malfunction',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.clou_duo_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low_fuel',
  })
# ---
